# MailingPort

./: .gitignore  CMakeLists.txt  build.bat
Client/: client.cpp
Server/: server.cpp
_HeaderFiles/: socket_MAN.cpp  socket_MAN.hh
include/: profile_MAN.cpp  profile_MAN.hh
